# arnie

./: .gitignore  LICENSE  README.md
arduino/bruton_smoothEx/: bruton_smoothEx.ino
arduino/drinkDuino/: drinkDuino.ino
arduino/leArm/: extras.ino  leArm.ino
arduino/leArm_1.1.1/: leArm_1.1.1.ino  poses.ino
arduino/leArm_1.1.2/: leArm_1.1.2.ino  poses.ino
arduino/manualServoCtrl/: manualServoCtrl.ino  poses.ino
arduino/switchTest/: switchTest.ino
arnie_arduino/: CMakeLists.txt  package.xml
arnie_arduino/launch/: run.launch
arnie_arm/: CMakeLists.txt  README.md  package.xml
arnie_arm/launch/: display.launch  gazebo.launch
arnie_arm/meshes/: base_link.STL  end_effector.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL
arnie_arm/urdf/: arnie_arm.csv  arnie_arm.urdf
arnie_dispenser/: README.md
arnie_kiosk/: CMakeLists.txt  README.md  package.xml
arnie_kiosk/kiosk/: camera.py  database.py  gui.py  kiosk.py
arnie_kiosk/launch/: kiosk.launch
arnie_kiosk/scripts/: menu.toml  menu_script.py
arnie_kiosk/src/: database_server.py  gui.py  kiosk.py
arnie_kiosk/srv/: FetchIds.srv  FetchItem.srv  FetchItemsOrdered.srv  FetchItemsOrderedByUser.srv  FetchUser.srv  InsertOrder.srv  InsertUser.srv
arnie_recognizer/: CMakeLists.txt  README.md  package.xml
arnie_recognizer/launch/: run.launch
arnie_recognizer/src/: recognizer.py
arnie_vision/: CMakeLists.txt  README.md  package.xml
arnie_vision/launch/: recog.launch  run.launch
arnie_vision/src/: camera.cpp  preview.cpp  recognizer.py
arnie_vision/srv/: AddFaceToRecog.srv
